# hue-rs

./: .gitignore  Cargo.toml  README.md
docs/: ActionGet.md  ActionGetAllOfAction.md  ActionGetAllOfActionEffects.md  ActionPost.md  ActionPostAction.md  Alert.md  ApiResponse.md  AuthApi.md  AuthenticateRequest.md  BridgeApi.md  BridgeGet.md  BridgeGetAllOfTimeZone.md  BridgeHomeApi.md  BridgeHomeGet.md  BridgePut.md  Color.md  ColorPaletteGet.md  ColorTemperature.md  ColorTemperatureDelta.md  ColorTemperaturePalettePost.md  ColorTemperaturePalettePostColorTemperature.md  DayTimeslotsGet.md  DeviceApi.md  DeviceGet.md  DeviceGetAllOfMetadata.md  DeviceGetAllOfUsertest.md  DevicePowerApi.md  DevicePowerGet.md  DevicePowerGetAllOfPowerState.md  DevicePut.md  DevicePutIdentify.md  DevicePutUsertest.md  Dimming.md  DimmingDelta.md  Dynamics.md  Effects.md  Error.md  ErrorResponse.md  GamutPosition.md  GetBridgeHomes200Response.md  (+104 more)
src/apis/: auth_api.rs  bridge_api.rs  bridge_home_api.rs  configuration.rs  device_api.rs  device_power_api.rs  grouped_light_api.rs  light_api.rs  light_level_api.rs  mod.rs  motion_api.rs  resource_api.rs  room_api.rs  scene_api.rs  smart_scene_api.rs  temperature_api.rs  zone_api.rs
src/models/: action_get.rs  action_get_all_of_action.rs  action_get_all_of_action_effects.rs  action_post.rs  action_post_action.rs  alert.rs  api_response.rs  authenticate_request.rs  bridge_get.rs  bridge_get_all_of_time_zone.rs  bridge_home_get.rs  bridge_put.rs  color.rs  color_palette_get.rs  color_temperature.rs  color_temperature_delta.rs  device_get.rs  (+113 more)
