[package]
name = "hue-rs"
version = "2.0.1"
authors = ["Luca Cavallin (https://github.com/lucavallin)"]
description = "A Rust Client for Philips Hue API."
license = "MIT"
edition = "2021"
repository = "https://github.com/lucavallin/hue-rs"
homepage = "https://lucavall.in/"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"] }
